--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,6 @@ jobs:
           node -v
           npm -v
           yarn -v
+          echo ${{ github.sha }} --- ,
           echo Add other actions to build,
           echo test, and deploy your project.
