--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,6 @@ jobs:
           npm -v
           yarn -v
           echo ${{ github.sha }} --- ,
+          echo ${{ github.ref }},
           echo Add other actions to build,
           echo test, and deploy your project.
