--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
           npm -v
           yarn -v
           echo ${{ github.sha }} --- ,
-          echo ${{ GITHUB_REF/refs\/tags\// }},
+          echo ${{ github.ref_name }},
           echo Add other actions to build,
           echo test, and deploy your project.
